src/test/ui/issues/issue-18819.stderr
error[E0061]: this function takes 2 parameters but 1 parameter was supplied
  --> $DIR/issue-18819.rs:16:5
   |
LL | fn print_x(_: &dyn Foo<Item=bool>, extra: &str) {
   | ----------------------------------------------- defined here
...
LL |     print_x(X);
   |     ^^^^^^^^^^ expected 2 parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
